# Git_BaseOperator

gtest_gmock/: CMakeLists.txt
gtest_gmock/inc/: A.hpp  B.hpp  user.hpp
gtest_gmock/src/: main.cpp
gtest_gmock/stubs/: MockUser.hpp
